<?xml version="1.0"?>
<package format="3">
  <name>component_explainer_sittable</name>
  <version>0.1.0</version>
  <description>component_explainer_sittable</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>explainability_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>